# serializer version: 1
# name: test_clock_script
  _CallList([
  ])
# ---
# name: test_clock_script.1
  _CallList([
  ])
# ---
# name: test_clock_script.2
  _CallList([
  ])
# ---
# name: test_clock_script.3
  _CallList([
    _Call(
      tuple(
        1356998400.0,
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_script[class.lox]
  _CallList([
  ])
# ---
# name: test_script[class.lox].1
  _CallList([
  ])
# ---
# name: test_script[class.lox].2
  _CallList([
  ])
# ---
# name: test_script[class.lox].3
  _CallList([
    _Call(
      tuple(
        '<Class: MyClass>',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        3,
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'Test 2',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'Bill',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'Jane',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'Jane',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'Jane',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        73,
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'Bob',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        '============================',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'Okay, telling aobut me',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        '<function: howTall>',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        99,
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'nil',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        99,
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'Talkative Bob',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'Done',
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_script[for_loop.lox]
  _CallList([
  ])
# ---
# name: test_script[for_loop.lox].1
  _CallList([
  ])
# ---
# name: test_script[for_loop.lox].2
  _CallList([
  ])
# ---
# name: test_script[for_loop.lox].3
  _CallList([
    _Call(
      tuple(
        1,
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        2,
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        3,
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        4,
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        5,
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        '=================',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        3,
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        4,
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        5,
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        '=================',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        1,
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        2,
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        3,
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        4,
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        5,
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        '=================',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        3,
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        '=================',
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_script[functions.lox]
  _CallList([
  ])
# ---
# name: test_script[functions.lox].1
  _CallList([
  ])
# ---
# name: test_script[functions.lox].2
  _CallList([
  ])
# ---
# name: test_script[functions.lox].3
  _CallList([
    _Call(
      tuple(
        'This is Zero',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'This is non zero',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'This is non zero',
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_script[functions_anonymous.lox]
  _CallList([
  ])
# ---
# name: test_script[functions_anonymous.lox].1
  _CallList([
  ])
# ---
# name: test_script[functions_anonymous.lox].2
  _CallList([
  ])
# ---
# name: test_script[functions_anonymous.lox].3
  _CallList([
    _Call(
      tuple(
        0,
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        4,
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        8,
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        12,
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        16,
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        20,
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        24,
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        28,
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        32,
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        36,
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_script[functions_closure.lox]
  _CallList([
  ])
# ---
# name: test_script[functions_closure.lox].1
  _CallList([
  ])
# ---
# name: test_script[functions_closure.lox].2
  _CallList([
  ])
# ---
# name: test_script[functions_closure.lox].3
  _CallList([
    _Call(
      tuple(
        1,
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        2,
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_script[functions_fibonacci_series.lox]
  _CallList([
  ])
# ---
# name: test_script[functions_fibonacci_series.lox].1
  _CallList([
  ])
# ---
# name: test_script[functions_fibonacci_series.lox].2
  _CallList([
  ])
# ---
# name: test_script[functions_fibonacci_series.lox].3
  _CallList([
    _Call(
      tuple(
        0,
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        1,
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        1,
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        2,
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        3,
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        5,
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        8,
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        13,
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        21,
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        34,
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        55,
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_script[if_conditional.lox]
  _CallList([
  ])
# ---
# name: test_script[if_conditional.lox].1
  _CallList([
  ])
# ---
# name: test_script[if_conditional.lox].2
  _CallList([
  ])
# ---
# name: test_script[if_conditional.lox].3
  _CallList([
    _Call(
      tuple(
        3,
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        7,
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        7,
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        7,
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_script[scoping.lox]
  _CallList([
  ])
# ---
# name: test_script[scoping.lox].1
  _CallList([
  ])
# ---
# name: test_script[scoping.lox].2
  _CallList([
  ])
# ---
# name: test_script[scoping.lox].3
  _CallList([
    _Call(
      tuple(
        'inner a',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'outer b',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'global c',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'outer a',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'outer b',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'global c',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'global a',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'global b',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'global c',
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_script[while_loop.lox]
  _CallList([
  ])
# ---
# name: test_script[while_loop.lox].1
  _CallList([
  ])
# ---
# name: test_script[while_loop.lox].2
  _CallList([
  ])
# ---
# name: test_script[while_loop.lox].3
  _CallList([
    _Call(
      tuple(
        1,
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        2,
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        3,
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        4,
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        5,
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        1,
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        6,
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        6,
      ),
      dict({
      }),
    ),
  ])
# ---
